# GNN-Hardware-Profiling

./: .gitignore  README.md
cpu_profiler/: baseline.py  profiler.py  pyproject.toml
gpu_profiler/: baseline.py  profiler.py  pyproject.toml
results/: FINAL_averaged_telemetry_cpu.csv  FINAL_averaged_telemetry_gpu.csv  FINAL_paper_summary_cpu.csv  FINAL_paper_summary_gpu.csv  average_results.py  plot_results.py
results/raw_cpu_runs/: zinc_hardware_baseline_1.csv  zinc_hardware_baseline_2.csv  zinc_hardware_baseline_3.csv  zinc_hardware_baseline_4.csv  zinc_hardware_baseline_5.csv
results/raw_gpu_runs/: zinc_hardware_baseline_1.csv  zinc_hardware_baseline_2.csv  zinc_hardware_baseline_3.csv  zinc_hardware_baseline_4.csv  zinc_hardware_baseline_5.csv
