[project]
name = "gnn-profiling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "torch>=2.13.0",
    "torch-geometric>=2.8.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
